# onboarding-and-verification-services

./: .dockerignore  .env.copy  .env.example  .env.keycloak.example  .env.keycloak.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.test.yaml  keycloak-and-temporal.md  pyproject.toml
.local/temporal/: temporal.db
alembic/: env.py
alembic/versions/: 001_initial_public_schema.py  002_tenant_schema_tables.py  003_tenant_template_definition_reviews.py  004_tenant_verification_runtime.py  005_tenant_key_and_verification_workflows.py  006_mobile_device_auth.py  9b7c008c68a7_legacy_revision_placeholder.py
app/: main.py
app/core/: auth.py  authz.py  config.py  context.py  dependencies.py  errors.py
app/db/: migrations.py  session.py
app/middleware/: __init__.py  request_id.py  tenants.py
app/models/: __init__.py  base.py  enums.py
app/routes/: __init__.py
docs/: architecture.md  keycloak_tenant_realm_setup.md  mobile_device_auth.md
scripts/: bootstrap_keycloak_local.sh  migrate.py  reset_migrations.py  seed_demo_data.sh  start_temporal_local.sh  verify_phase1.py
tests/: conftest.py  test_answer_validator.py  test_auth.py  test_auth_proxy.py  test_baseline_templates.py  test_database_migrations.py  test_device_auth_crypto.py  test_four_eyes.py  test_platform_super_admin_tenant_header.py  test_products.py  test_rbac_routes.py  test_rbac_tenants.py  test_submission_search.py  test_submission_validation.py  test_submission_verifications.py  test_submissions.py  test_tenant_templates.py  test_tenants.py
(+135 files in other folders)
